# SETI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: SNe.hpp  constance.hpp  galaxy.hpp  planet.hpp
src/: SNe.cpp  constance.cpp  galaxy.cpp  planet.cpp
